# FedScale

./: .dockerignore  .gitignore  .readthedocs.yaml  LICENSE  README.md  client.py  demo_client.py  demo_server.py  download_data.sh  environment-arm.yml  environment-osx-arm64-general.yml  environment-osx-arm64-specific.yml  environment.yml  fedscale.sh  install.sh  redis_inst.sh  redis_start.sh  setup.py  tutorial.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: manager.py  shutdown.py
core/: README.md  aggregator.py  argParser.py  client.py  client_manager.py  executor.py  executor_raw.py  fl_aggregator_libs.py  fl_client_libs.py  fllibs.py  ipmapping  job_api_pb2.py  optimizer.py  (+3 more)
fedscale/edge/android/app/: CMakeLists.txt  build.gradle
fedscale/edge/android/app/src/main/: AndroidManifest.xml
fedscale/edge/android/app/src/main/java/com/fedscale/android/app/: FLApp.java
fedscale/edge/android/app/src/main/java/com/fedscale/android/executor/: Client.java  FLExecutor.java
fedscale/edge/android/app/src/main/java/com/fedscale/android/mnn/: MNNBackend.java  MNNNative.java
fedscale/edge/android/app/src/main/java/com/fedscale/android/tflite/: TFLiteBackend.java
fedscale/edge/android/app/src/main/java/com/fedscale/android/utils/: ClientConnections.java  Common.java  ImagePreprocessor.java  MessageProcessor.java
fedscale/edge/android/app/src/main/jni/: mnntrainnative.cpp
fedscale/edge/android/app/src/main/proto/: job_api.proto
fedscale/edge/android/app/src/main/res/layout/: activity_main.xml
fedscale/edge/android/app/src/main/res/values/: strings.xml
(+738 files in other folders)
